# dexter-contacts

./: INSTALL  meson.build
data/: org.pantheon.dexter-contacts.appdata.xml.in  org.pantheon.dexter-contacts.desktop.in.in
po/: POTFILES  de.po  en.po  es.po  org.pantheon.dexter-contacts.pot
src/: Application.vala  CMakeLists.txt  ContactView.vala  ContactsList.vala  ContactsManager.vala  Window.vala
src/Widgets/: ContactAddressEntry.vala  ContactBody.vala  ContactItem.vala  HeaderItem.vala  MapView.vala
